--- a/.github/workflows/push_ci.yml
+++ b/.github/workflows/push_ci.yml
@@ -68,7 +68,7 @@ jobs:
           echo "${{ secrets.SIGN_KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
           ./gradlew :app:assembleRelease
         env:
-          KEYSTORE_PATH: "../keystore.jks"
+          KEYSTORE_PATH: "app/keystore.jks"
           KEYSTORE_PASSWORD: ${{ secrets.SIGN_KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.SIGN_KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.SIGN_KEY_PASSWORD }}
